--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "baseUrl": "./",
     "paths": {
       "@components/*": ["src/components/*"],
-      // "@styles/*": ["src/styles/*"],
+      "@api/*": ["src/pages/api/*"],
       // "@types/*": ["src/types/*"],
       "@images/*": ["src/images/*"],
     }
